--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,9 @@
 	body
 	{
 		background-color:		#183026;
-		background-image:		url('images/overlay.png'),			url('../images/bg.jpg');
-		background-repeat:		repeat,								no-repeat;
-		background-size:		auto,								cover;
+		background-image:		url('http://s3.favim.com/orig/46/black-cats-cute-heart-love-Favim.com-413965.jpg'),			url('../images/bg.jpg');
+		background-repeat:		no-repeat,								no-repeat;
+		background-size:		cover,								cover;
 		background-position: 	top left,							center 0;
 		background-attachment:	fixed,								fixed;
 	}
@@ -852,7 +852,7 @@
 		color: #fff;
 		text-shadow: 0 0 0.5px rgba(255,255,255,0.25);
 		text-align: center;
-		background: #35b88f url('images/banner.svg') bottom center no-repeat;
+		background: #35b88f url('images/banner.sv') bottom center no-repeat;
 		padding: 5em 0 5em 0;
 		margin: 0;
 		background-size: 125% auto;
