--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,6 @@
 @import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600');
 @import url('font-awesome.min.css');
 
-/*
-	Overflow by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
 /*********************************************************************************/
 /* Basic                                                                         */
 /*********************************************************************************/
@@ -20,6 +14,7 @@
 		background-size:		cover,								cover;
 		background-position: 	top left,							center 0;
 		background-attachment:	fixed,								fixed;
+
 	}
 
 		body.is-scroll
@@ -50,15 +45,16 @@
 		font-weight: 300;
 		letter-spacing: 1px;
 		color: #3a3939;
-		text-shadow: 0 0 0.5px rgba(58,57,57,0.25);
+		text-shadow: 5px 5px 5px #404040;
 		-webkit-text-stroke: 0.25px;
 	}
 
 	h1,h2,h3,h4,h5,h6
 	{
-		font-weight: 400;
+		font-weight: 1000;
 		text-transform: uppercase;
 		line-height: 1.75em;
+		text-shadow: 5px 5px 5px #404040;
 	}
 	
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a
@@ -138,6 +134,7 @@
 	p, ul, ol, dl, table
 	{
 		margin-bottom: 1em;
+		text-shadow: 5px 5px 5px #404040;
 	}
 
 	header
@@ -613,6 +610,8 @@
 						top: 0;
 						height: 100%;
 						width: auto;
+						border-radius: 125px;
+				border-radius: 125px;
 					}
 
 				.box.style1 .inner
@@ -636,6 +635,7 @@
 						.box.style1.right .image img
 						{
 							right: 0;
+							border-radius: 125px;
 						}
 					
 					.box.style1.right .inner
@@ -856,6 +856,7 @@
 		padding: 5em 0 5em 0;
 		margin: 0;
 		background-size: 125% auto;
+		border-radius: 125px;
 	}
 
 		#banner .button
